# programmeringsmetodik-projekt

./: CMakeLists.txt  clickable.h  clickables.cpp  drawable_manager.cpp  drawable_manager.h  event_handler.cpp  event_handler.h  game.cpp  game.h  main.cpp  run_functions.cpp  yazyfunct.cpp  yazyfunct.h  yazygame.cpp  yazygame.h
docs/: game.md
yazy_projekt/: CMakeLists.txt  category.h  clickable.h  clickables.cpp  compile_commands.json  game.cpp  game.h  main.cpp  run_functions.h  yazygame.cpp  yazygame.h
yazy_projekt/.cache/clangd/index/: category.h.2CCD55E4B15D7E5B.idx  clickable.h.208E1363DD113AD0.idx  game.h.D895F280D5289440.idx  main.cpp.63A183B64061C466.idx  run_functions.cpp.5E89E1CFBCE2AE9F.idx  run_functions.h.19C5FEAE0D0BCD17.idx  yazygame.cpp.8E1E4D4137378FA4.idx  yazygame.h.9B6FF3B70F8B7F6A.idx
